snapshots/production/live/all-ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true"},"name":"icebot-backend-private","namespace":"icebot"},"spec":{"rules":[{"host":"edge-api.icebot.io.vn","http":{"paths":[{"backend":{"service":{"name":"icebot-backend","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: "true"
    creationTimestamp: "2026-08-16T12:42:08Z"
    generation: 1
    name: icebot-backend-private
    namespace: icebot
    resourceVersion: "155762"
    uid: cc8d7636-a9c2-4f57-8b87-ccd51ba0df35
  spec:
    ingressClassName: traefik
    rules:
    - host: edge-api.icebot.io.vn
      http:
        paths:
        - backend:
            service:
              name: icebot-backend
              port:
                number: 8080
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 110.172.29.81
kind: List
metadata:
  resourceVersion: ""
