snapshots/production/live/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"icebot-backend","namespace":"icebot"},"spec":{"ports":[{"name":"http","port":8080,"targetPort":8080}],"selector":{"app":"icebot-backend"},"type":"ClusterIP"}}
  creationTimestamp: "2026-08-10T21:43:58Z"
  name: icebot-backend
  namespace: icebot
  resourceVersion: "5906"
  uid: a883c15b-078e-48d4-98d6-b203a97737f9
spec:
  clusterIP: 10.43.198.12
  clusterIPs:
  - 10.43.198.12
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: icebot-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
