snapshots/production/live/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"cloudflared","namespace":"icebot"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"cloudflared"}},"template":{"metadata":{"labels":{"app":"cloudflared"}},"spec":{"containers":[{"args":["tunnel","--protocol","http2","--no-autoupdate","run"],"env":[{"name":"TUNNEL_TOKEN","valueFrom":{"secretKeyRef":{"key":"TUNNEL_TOKEN","name":"cloudflared-token"}}}],"image":"cloudflare/cloudflared:latest","name":"cloudfl [...]
  creationTimestamp: "2026-08-10T22:25:07Z"
  generation: 6
  name: cloudflared
  namespace: icebot
  resourceVersion: "7863"
  uid: 12292e05-523d-463a-b170-76e07654b9cd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cloudflared
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-08-11T05:35:54+07:00"
      creationTimestamp: null
      labels:
        app: cloudflared
    spec:
      containers:
      - args:
        - tunnel
        - --protocol
        - http2
        - --no-autoupdate
        - run
        env:
        - name: TUNNEL_TOKEN
          valueFrom:
            secretKeyRef:
              key: TUNNEL_TOKEN
              name: cloudflared-token
        image: cloudflare/cloudflared:latest
        imagePullPolicy: Always
        name: cloudflared
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-08-10T22:35:57Z"
    lastUpdateTime: "2026-08-10T22:35:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-08-10T22:25:07Z"
    lastUpdateTime: "2026-08-10T22:35:57Z"
    message: ReplicaSet "cloudflared-55c684775" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
