snapshots/production/live/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2026-08-10T17:38:29Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-39.0.701_up39.0.7
  name: traefik
  namespace: kube-system
  resourceVersion: "1127"
  uid: 2b3fa64b-b37a-4b30-b08f-78be05ff2535
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.93.251
  clusterIPs:
  - 10.43.93.251
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: web
    nodePort: 31475
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 32113
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 110.172.29.81
      ipMode: VIP
