snapshots/production/live/traefik-servicelb-pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2026-08-10T17:38:29Z"
    generateName: svclb-traefik-2b3fa64b-
    generation: 1
    labels:
      app: svclb-traefik-2b3fa64b
      controller-revision-hash: cbbbdcbbf
      pod-template-generation: "1"
      svccontroller.k3s.cattle.io/svcname: traefik
      svccontroller.k3s.cattle.io/svcnamespace: kube-system
    name: svclb-traefik-2b3fa64b-k5qgt
    namespace: kube-system
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: DaemonSet
      name: svclb-traefik-2b3fa64b
      uid: a6927847-70c0-4481-800b-7b477e7b7e08
    resourceVersion: "1126"
    uid: 90c7ab55-8b3b-428e-95ce-89224f85f982
  spec:
    affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchFields:
            - key: metadata.name
              operator: In
              values:
              - icebot-cloud-prod
    automountServiceAccountToken: false
    containers:
    - env:
      - name: SRC_PORT
        value: "80"
      - name: SRC_RANGES
        value: 0.0.0.0/0
      - name: DEST_PROTO
        value: TCP
      - name: DEST_PORT
        value: "80"
      - name: DEST_IPS
        value: 10.43.93.251
      image: rancher/klipper-lb:v0.4.17
      imagePullPolicy: IfNotPresent
      name: lb-tcp-80
      ports:
      - containerPort: 80
        hostPort: 80
        name: lb-tcp-80
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          add:
          - NET_ADMIN
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
    - env:
      - name: SRC_PORT
        value: "443"
      - name: SRC_RANGES
        value: 0.0.0.0/0
      - name: DEST_PROTO
        value: TCP
      - name: DEST_PORT
        value: "443"
      - name: DEST_IPS
        value: 10.43.93.251
      image: rancher/klipper-lb:v0.4.17
      imagePullPolicy: IfNotPresent
      name: lb-tcp-443
      ports:
      - containerPort: 443
        hostPort: 443
        name: lb-tcp-443
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          add:
          - NET_ADMIN
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: icebot-cloud-prod
    preemptionPolicy: PreemptLowerPriority
    priority: 2000001000
    priorityClassName: system-node-critical
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      sysctls:
      - name: net.ipv4.ip_forward
        value: "1"
    serviceAccount: svclb
    serviceAccountName: svclb
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoSchedule
      key: node-role.kubernetes.io/master
      operator: Exists
    - effect: NoSchedule
      key: node-role.kubernetes.io/control-plane
      operator: Exists
    - key: CriticalAddonsOnly
      operator: Exists
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/disk-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/pid-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/unschedulable
      operator: Exists
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-08-10T17:52:18Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-08-10T17:38:29Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-08-10T17:52:18Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-08-10T17:52:18Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-08-10T17:38:29Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://aaa0fa1478f5a59981643eb59c7b56cbe45d31406a40e38e972a0d6fc949ed8f
      image: docker.io/rancher/klipper-lb:v0.4.17
      imageID: docker.io/rancher/klipper-lb@sha256:910944bb0bd94f060a82a56ca1ea1c577d3e49b3473a093a47a985f32e92d94a
      lastState:
        terminated:
          containerID: containerd://7596f04d44222b57d6a0e66a71aca84422232997cf6ca1d7783bebf712265433
          exitCode: 1
          finishedAt: "2026-08-10T17:52:15Z"
          reason: Error
          startedAt: "2026-08-10T17:38:35Z"
      name: lb-tcp-443
      ready: true
      resources: {}
      restartCount: 1
      started: true
      state:
        running:
          startedAt: "2026-08-10T17:52:18Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 6
          - 10
          - 11
          - 20
          - 26
          - 27
          uid: 0
    - containerID: containerd://1024e53950873ddd686699e076facda62d394be5ebc16231007578a1a53c15a0
      image: docker.io/rancher/klipper-lb:v0.4.17
      imageID: docker.io/rancher/klipper-lb@sha256:910944bb0bd94f060a82a56ca1ea1c577d3e49b3473a093a47a985f32e92d94a
      lastState:
        terminated:
          containerID: containerd://56657286422248b99958146615e997129598fe51315491bfc67a5853cf5d1948
          exitCode: 1
          finishedAt: "2026-08-10T17:52:15Z"
          reason: Error
          startedAt: "2026-08-10T17:38:35Z"
      name: lb-tcp-80
      ready: true
      resources: {}
      restartCount: 1
      started: true
      state:
        running:
          startedAt: "2026-08-10T17:52:17Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 6
          - 10
          - 11
          - 20
          - 26
          - 27
          uid: 0
    hostIP: 110.172.29.81
    hostIPs:
    - ip: 110.172.29.81
    phase: Running
    podIP: 10.42.0.13
    podIPs:
    - ip: 10.42.0.13
    qosClass: BestEffort
    startTime: "2026-08-10T17:38:29Z"
kind: List
metadata:
  resourceVersion: ""
